@@ -5,6 +5,10 @@
 	
 	* arch/ppc/hal.c (rthal_release_irq): Handle the possible failure 
 	of the adeos_virtualize_irq_from() call. 
+
+	* arch/i386/hal.c (__rthal_init): Handle the possible failure of
+	adeos_virtualize_irq() and adeos_register_domain(). Perform the 
+	necessary cleanups on all failures in this function.
 	
 2005-03-06  Philippe Gerum  <rpm@xenomai.org>
 
